install-meta (0.0.47) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Joaquim Boura ]
  * moving to xdg-menus

 -- Joaquim Boura <x-un-i@sidux.com>  Wed, 28 Mar 2007 22:50:24 +0200

install-meta (0.0.46) unstable; urgency=low

  [ Chris Hildebrandt ]
  * meta-package tor/privoxy added, post-install configs to be added.
  
  [ Horst Tritremmel ]
  * all windows not resizeable.

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 22 Mar 2007 18:15:42 +0100

install-meta (0.0.45) unstable; urgency=low

  * add checkbutton for --yes option
  * games packages update

 -- Horst Tritremmel <hjt@sidux.com>  Sat, 10 Mar 2007 22:58:27 +0100

install-meta (0.0.44) unstable; urgency=low

  * add Office-Koffice.bm Office-Gnumeric_Abiword.bm

 -- Horst Tritremmel <hjt@sidux.com>  Wed,  7 Mar 2007 09:12:52 +0100

install-meta (0.0.43) unstable; urgency=low

  * compiler warning shut up
  * category text is now bold
  * bugfix for bold category text
  * new icons for category
  * source packages.d bugfix for info window
  * add game packages

 -- Horst Tritremmel <hjt@sidux.com>  Tue,  6 Mar 2007 15:22:20 +0100

install-meta (0.0.42) unstable; urgency=low

  * add categories

 -- Horst Tritremmel <hjt@sidux.com>  Sat,  3 Mar 2007 18:18:47 +0100

install-meta (0.0.41) unstable; urgency=low

  * add meta-package info 

 -- Horst Tritremmel <hjt@sidux.com>  Thu,  1 Mar 2007 22:07:31 +0100

install-meta (0.0.39) unstable; urgency=low

  [ Horst Tritremmel ]
  * made *.bm files non executable

  [ Stefan Lippers-Hollmann ]
  * strip #!/bin/bash from *.bm files to shut up lintian.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Feb 2007 15:52:41 +0100

install-meta (0.0.37) unstable; urgency=low

  * add fvwm-crystal.bm
  * umount message fix
  * added postprocess to fvwm and fluxbox so the get the sidux wallpaper as
    default.

 -- Joaquim Boura <x-un-i@sidux.com>  Wed, 21 Feb 2007 00:17:38 +0100

install-meta (0.0.36) unstable; urgency=low
