@@ -11,6 +11,7 @@
   <property name="modal">False</property>
   <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
+  <property name="icon">sidux-meta-icon.png</property>
   <property name="icon_name"></property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
@@ -66,8 +67,9 @@
 	      <property name="reorderable">False</property>
 	      <property name="enable_search">True</property>
 	      <property name="fixed_height_mode">False</property>
-	      <property name="hover_selection">True</property>
-	      <property name="hover_expand">True</property>
+	      <property name="hover_selection">False</property>
+	      <property name="hover_expand">False</property>
+	      <signal name="button_press_event" handler="on_treeview1_button_press_event" last_modification_time="Thu, 29 Mar 2007 08:31:35 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -264,49 +266,6 @@
       </child>
 
       <child>
-	<widget class="GtkImage" id="image10">
-	  <property name="width_request">21</property>
-	  <property name="height_request">21</property>
-	  <property name="visible">True</property>
-	  <property name="pixbuf">install-meta-info.png</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-	<packing>
-	  <property name="x">0</property>
-	  <property name="y">63</property>
-	</packing>
-      </child>
-
-      <child>
-	<widget class="GtkLabel" id="label_info">
-	  <property name="width_request">33</property>
-	  <property name="height_request">449</property>
-	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Info Metapackage    &quot;DOUBLECLICK&quot;  -&gt;</property>
-	  <property name="use_underline">False</property>
-	  <property name="use_markup">False</property>
-	  <property name="justify">GTK_JUSTIFY_LEFT</property>
-	  <property name="wrap">False</property>
-	  <property name="selectable">False</property>
-	  <property name="xalign">0.20000000298</property>
-	  <property name="yalign">0</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-	  <property name="width_chars">-1</property>
-	  <property name="single_line_mode">False</property>
-	  <property name="angle">90</property>
-	</widget>
-	<packing>
-	  <property name="x">0</property>
-	  <property name="y">88</property>
-	</packing>
-      </child>
-
-      <child>
 	<widget class="GtkCheckButton" id="checkbutton_yes">
 	  <property name="width_request">297</property>
 	  <property name="height_request">28</property>
@@ -323,6 +282,64 @@
 	<packing>
 	  <property name="x">288</property>
 	  <property name="y">512</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkButton" id="button_expand">
+	  <property name="width_request">25</property>
+	  <property name="height_request">25</property>
+	  <property name="visible">True</property>
+	  <property name="tooltip" translatable="yes">expand all</property>
+	  <property name="can_focus">True</property>
+	  <property name="relief">GTK_RELIEF_NORMAL</property>
+	  <property name="focus_on_click">True</property>
+	  <signal name="clicked" handler="on_button_expand_clicked" last_modification_time="Thu, 29 Mar 2007 10:40:11 GMT"/>
+
+	  <child>
+	    <widget class="GtkImage" id="image10">
+	      <property name="visible">True</property>
+	      <property name="stock">gtk-add</property>
+	      <property name="icon_size">4</property>
+	      <property name="xalign">0.5</property>
+	      <property name="yalign">0.5</property>
+	      <property name="xpad">0</property>
+	      <property name="ypad">0</property>
+	    </widget>
+	  </child>
+	</widget>
+	<packing>
+	  <property name="x">0</property>
+	  <property name="y">64</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkButton" id="button_collapse">
+	  <property name="width_request">25</property>
+	  <property name="height_request">25</property>
+	  <property name="visible">True</property>
+	  <property name="tooltip" translatable="yes">collapse all </property>
+	  <property name="can_focus">True</property>
+	  <property name="relief">GTK_RELIEF_NORMAL</property>
+	  <property name="focus_on_click">True</property>
+	  <signal name="clicked" handler="on_button_collapse_clicked" last_modification_time="Thu, 29 Mar 2007 10:48:47 GMT"/>
+
+	  <child>
+	    <widget class="GtkImage" id="image11">
+	      <property name="visible">True</property>
+	      <property name="stock">gtk-remove</property>
+	      <property name="icon_size">4</property>
+	      <property name="xalign">0.5</property>
+	      <property name="yalign">0.5</property>
+	      <property name="xpad">0</property>
+	      <property name="ypad">0</property>
+	    </widget>
+	  </child>
+	</widget>
+	<packing>
+	  <property name="x">0</property>
+	  <property name="y">96</property>
 	</packing>
       </child>
     </widget>
