@@ -1,4 +1,4 @@
-FLL_DESCRIPTION="Arcade Games"
+FLL_DESCRIPTION="Various games to play in textmode or consoles. Even geeks wanna play."
 
 FLL_PRE_PROCESSING=(
 	"#!/bin/bash"
@@ -11,20 +11,12 @@ FLL_PACKAGE_DEPMODS=(
 )
 
 FLL_PACKAGES=(
-       liquidwar
-       blobwars
-       bloboats
-       neverball
-       armagetron
-       briquolo
-       gl-117
-       trackballs
-       lbreakout2
-       wormux
-       luola
-              luola-nostalgy
-       bomberclone
-       tomatoes
+      asciijump
+      bsdgames
+      freesweep
+      moon-buggy
+      nettoe
+      ninvaders
 )
 
 FLL_POST_PROCESSING=(
