@@ -1,0 +1,24 @@
+FLL_DESCRIPTION="Smaller_Office"
+
+FLL_PRE_PROCESSING=(
+   "#!/bin/bash"
+   "echo \"---- in preprocessing ----\""
+   "# paste your code here (not necessary for normal install, only for preconfigs)"
+   "echo \"---- preprocessing done----\""
+)
+
+FLL_PACKAGE_DEPMODS=(
+)
+
+FLL_PACKAGES=(
+	abiword
+        gnumeric
+        dia
+)
+
+FLL_POST_PROCESSING=(
+   "#!/bin/bash"
+   "echo \"---- in postprocessing ----\""
+   "echo 'DesktopBackgroundImage=/usr/share/wallpapers/sidux.jpg'>>/usr/share/icewm/preferences"
+   "echo \"---- postprocessing done----\""
+) 
