@@ -1,0 +1,26 @@
+FLL_DESCRIPTION="IceWM with kde-lite"
+
+FLL_PRE_PROCESSING=(
+   "#!/bin/bash"
+   "echo \"---- in preprocessing ----\""
+   "# paste your code here (not necessary for normal install, only for preconfigs)"
+   "echo \"---- preprocessing done----\""
+)
+
+FLL_PACKAGE_DEPMODS=(
+)
+
+FLL_PACKAGES=(
+	icewm
+	icewm-common
+	icewm-themes
+	icemc
+	rox-filer
+)
+
+FLL_POST_PROCESSING=(
+   "#!/bin/bash"
+   "echo \"---- in postprocessing ----\""
+   "echo 'DesktopBackgroundImage=/usr/share/wallpapers/sidux.jpg'>>/usr/share/icewm/preferences"
+   "echo \"---- postprocessing done----\""
+) 
